The development of user authorization in the application has been completed. Added OpenAPI 3.0 at /swagger-ui/index.html